--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@ description: ""
 ---
 
 
+<div>
+	<p class="lead">Welcome to my website!</p>
+	<p>I am currently working as a biostatistician at <a href = "https://www.osu.edu/">The Ohio State University</a> <a href = "https://nursing.osu.edu/">College of Nursing</a>. I earned my Ph.D. degree in statistics from <a href = "https://uconn.edu/">University of Connecticut</a> in 2020. My dissertation topic is Bayesian variable selection for non-Gaussian regression models with spatially varying coefficients. My Ph.D. advisor is Dr. Lynn Kuo. I received my bachelor's degree in statistics at <a href = "https://english.bnu.edu.cn/">Beijing Normal University</a>.</p>
+</div>
