--- a/index.html
+++ b/index.html
@@ -9,18 +9,28 @@ description: ""
 	<p>I am currently working as a biostatistician at <a href = "https://www.osu.edu/" style="font-style: italic;">The Ohio State University</a> <a href = "https://nursing.osu.edu/" style="font-style: italic;">College of Nursing</a>. I earned my Ph.D. degree in statistics from <a href = "https://uconn.edu/" style="font-style: italic;">University of Connecticut</a> in 2020. My dissertation topic is Bayesian variable selection for non-Gaussian regression models with spatially varying coefficients. My Ph.D. advisor is Dr. Lynn Kuo. I received my bachelor's degree in statistics at <a href = "https://english.bnu.edu.cn/" style="font-style: italic;">Beijing Normal University</a>.</p>
 </div>
 
-## Education
+<div>
+<h2>Education</h2>
+<ul>
+<li>University of Connecticut, Storre, CT, US</li>
+    <ul>
+    <li>Ph.D. in Statistics, 2020</li>
+    <li>M.S. in Statistics, 2017</li>
+    </ul>
+<li>Beijing Normal University**, Beijing, China</li>
+    <ul>
+    <li>B.S. in Statistics
+    </ul>
+</ul>
+</div>
 
-- **University of Connecticut**, Storre, CT, US
-..* Ph.D. in Statistics, 2020
-..* M.S. in Statistics, 2017
-- **Beijing Normal University**, Beijing, China
-..* B.S. in Statistics
-
-## Experience
-
-- *Biostatistician*, **The Ohio State University College of Nursing**, March 2021 - present
-- *Biostatistical Consultant*, **UConn Health**, Septermber 2017 - August 2020
-- *Teaching Assistant*, **University of Connecticut**, January 2018 - May 2020
-- *Statistical Consultant*, **University of Connecticut**, August 2017 - May 2020
-- *PhD Intern/Coop*, **Sanofi Pharmaceutical Company**, May 2019 - August 2019
+<div>
+<h2>Experience</h2>
+<ul>
+<li>Biostatistician, The Ohio State University College of Nursing, March 2021 - present</li>
+<li>Biostatistical Consultant, UConn Health, Septermber 2017 - August 2020</li>
+<li>Teaching Assistant, University of Connecticut, January 2018 - May 2020</li>
+<li>Statistical Consultant, University of Connecticut, August 2017 - May 2020</li>
+<li>PhD Intern/Coop, Sanofi Pharmaceutical Company, May 2019 - August 2019</li>
+</ul>
+</div>
