--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: ""
     <li>Ph.D. in Statistics, 2020</li>
     <li>M.S. in Statistics, 2017</li>
     </ul>
-<li>Beijing Normal University**, Beijing, China</li>
+<li>Beijing Normal University, Beijing, China</li>
     <ul>
     <li>B.S. in Statistics
     </ul>
