--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: ""
 <div>
 <h2>Education</h2>
 <ul>
-<li>University of Connecticut, Storre, CT, US</li>
+<li>University of Connecticut, Storrs, CT, US</li>
     <ul>
     <li>Ph.D. in Statistics, 2020</li>
     <li>M.S. in Statistics, 2017</li>
