--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Statistics Tutorial"
 description: ""
-header-img: ""
+header-img: "/img/head_tuto.jpeg"
 ---
 
 <!-- Language Selector -->
