--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: ""
     </ul>
 <li>Beijing Normal University, Beijing, China</li>
     <ul>
-    <li>B.S. in Statistics
+    <li>B.S. in Statistics, 2015
     </ul>
 </ul>
 </div>
