--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@ description: ""
 
 <div>
 	<p class="lead">Welcome to my website!</p>
-	<p>I am currently working as a biostatistician at <a href = "https://www.osu.edu/" style="font-style: italic;">The Ohio State University</a> <a href = "https://nursing.osu.edu/" style="font-style: italic;">College of Nursing</a>. I earned my Ph.D. degree in statistics from <a href = "https://uconn.edu/" style="font-style: italic;">University of Connecticut</a> in 2020. My dissertation topic is Bayesian variable selection for non-Gaussian regression models with spatially varying coefficients. My Ph.D. advisor is Dr. Lynn Kuo. I received my bachelor's degree in statistics at <a href = "https://english.bnu.edu.cn/" style="font-style: italic;">Beijing Normal University</a>.</p>
+	<p>I am currently working as a biostatistician at <a href = "https://emmes.com/" style="font-style: italic;">Emmes</a>. I earned my Ph.D. degree in statistics from <a href = "https://uconn.edu/" style="font-style: italic;">University of Connecticut</a> in 2020. My dissertation topic is Bayesian variable selection for non-Gaussian regression models with spatially varying coefficients. My Ph.D. advisor is Dr. Lynn Kuo. I received my bachelor's degree in statistics at <a href = "https://english.bnu.edu.cn/" style="font-style: italic;">Beijing Normal University</a>.</p>
 </div>
 
 <div>
+<h2>Experience</h2>
+<ul>
+<li>Biostatistician, Emmes, April 2022 - Present</li>
+<li>Biostatistician, The Ohio State University, March 2021 - April 2022</li>
+</ul>	
+	
 <h2>Education</h2>
 <ul>
 <li>University of Connecticut, Storrs, CT, US</li>
