--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@ description: ""
 </div>
 
 <div>
-<h2>Experience</h2>
-<ul>
-<li>Biostatistician, Emmes, April 2022 - Present</li>
-<li>Biostatistician, The Ohio State University, March 2021 - April 2022</li>
-</ul>	
-	
 <h2>Education</h2>
 <ul>
 <li>University of Connecticut, Storrs, CT, US</li>
@@ -33,7 +27,8 @@ description: ""
 <div>
 <h2>Experience</h2>
 <ul>
-<li>Biostatistician, The Ohio State University College of Nursing, March 2021 - present</li>
+<li>Biostatistician, Emmes, April 2022 - present</li>	
+<li>Biostatistician, The Ohio State University College of Nursing, March 2021 - April 2022</li>
 <li>Biostatistical Consultant, UConn Health, Septermber 2017 - August 2020</li>
 <li>Teaching Assistant, University of Connecticut, January 2018 - May 2020</li>
 <li>Statistical Consultant, University of Connecticut, August 2017 - May 2020</li>
